--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 
 
         <div class="navbar">
-            <a href="#home1" style="--1:1" class="active">Home</a>
+            <!-- <a href="#home1" style="--1:1" class="active">Home</a>
             <a href="#about-me" style="--1:2">About Me</a>
             <a href="#see1" style="--1:3">Skills</a>
             <a href="#project" style="--1:4">My Work</a>
             <a href="#contrct" style="--1:6">Contact Me</a>
 
-        </div>
+        </div> -->
 
     </header>
 
