--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 <div class="portfolio-info">
                   <h4>Student Home page</h4>
                   <div class="icon">
-                    <i class="fa fa-search"></i>
+                    <!-- <i class="fa fa-search"></i> -->
                   </div>
                 </div>
               </div>
@@ -262,7 +262,7 @@
                 <div class="portfolio-info">
                   <h4>Society Management Home page</h4>
                   <div class="icon">
-                    <i class="fa fa-search"></i>
+                    <!-- <i class="fa fa-search"></i> -->
                   </div>
                 </div>
               </div>
@@ -276,7 +276,7 @@
                 <div class="portfolio-info">
                   <h4>Online Exam Management home page</h4>
                   <div class="icon">
-                    <i class="fa fa-search"></i>
+                    <!-- <i class="fa fa-search"></i> -->
                   </div>
                 </div>
               </div>
@@ -290,7 +290,7 @@
                 <div class="portfolio-info">
                   <h4>Online chat app</h4>
                   <div class="icon">
-                    <i class="fa fa-search"></i>
+                    <!-- <i class="fa fa-search"></i> -->
                   </div>
                 </div>
               </div>
@@ -304,7 +304,7 @@
                 <div class="portfolio-info">
                   <h4>Crud</h4>
                   <div class="icon">
-                    <i class="fa fa-search"></i>
+                    <!-- <i class="fa fa-search"></i> -->
                   </div>
                 </div>
               </div>
@@ -318,7 +318,7 @@
                 <div class="portfolio-info">
                   <h4>Khsns Khazana</h4>
                   <div class="icon">
-                    <i class="fa fa-search"></i>
+                    <!-- <i class="fa fa-search"></i> -->
                   </div>
                 </div>
               </div>
