--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             <h1>Darshan Chudasama</h1>
             <span class="iTyped"></span>
             <div class="social-links">
-              <a href="chudasamadarshan674@gmail.com"><i class="fa fa-envelope"></i></a>
-              <a href="7600242597"><i class="fa fa-phone"></i></a>
+              <a href="mailto:chudasamadarshan674@gmail.com"><i class="fa fa-envelope"></i></a>
+              <a href="tel: 7600242597"><i class="fa fa-phone"></i></a>
               <a href="https://github.com/Darshan1chudasama"><i class="fa fa-github"></i></a>
               <a href="https://www.linkedin.com/in/darshan-chudasama-b21aa527b/"><i class="fa fa-linkedin"></i></a>
             </div>
@@ -301,7 +301,7 @@
                   <img src="images/portfolio/project 6.png" alt="Wordpress">
                 </div>
                 <div class="portfolio-info">
-                  <h4>Khsns Khazana</h4>
+                  <h4>Khana Khazana</h4>
                   <div class="icon">
                     <!-- <i class="fa fa-search"></i> -->
                   </div>
