--- a/index.html
+++ b/index.html
@@ -54,11 +54,12 @@
             <h1>Darshan Chudasama</h1>
             <span class="iTyped"></span>
             <div class="social-links">
-              <a href="chudasamadarshan674@gmail.com"><i class="fa fa-envelope"></i></a>
-              <a href="7600242597"><i class="fa fa-phone"></i></a>
-              <a href="https://github.com/Darshan1chudasama"><i class="fa fa-github"></i></a>
-              <a href="https://www.linkedin.com/in/darshan-chudasama-b21aa527b/"><i class="fa fa-linkedin"></i></a>
+                <a href="mailto:chudasamadarshan674@gmail.com"><i class="fa fa-envelope"></i></a>
+                <a href="tel:7600242597"><i class="fa fa-phone"></i></a>
+                <a href="https://github.com/Darshan1chudasama"><i class="fa fa-github"></i></a>
+                <a href="https://www.linkedin.com/in/darshan-chudasama-b21aa527b/"><i class="fa fa-linkedin"></i></a>
             </div>
+
           </div>
         </div>
       </section>
